Fix section title size on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -35,6 +35,11 @@ a {
   line-height: 1.7;
   margin-bottom: 32px;
 }
+@media (max-width: 485px) {
+  .section-title{
+    font-size: 18px;
+  }
+}
 .section-subtitle {
   color: #24cb61;
   font-family: Montserrat;
